--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
+    "@mui/x-data-grid": "^6.6.0",
+    "@mui/x-date-pickers": "^6.6.0",
+    "@supabase/supabase-js": "^2.22.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,17 +17,21 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.36",
     "@types/react-dom": "^18.0.11",
+    "dayjs": "^1.11.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gen:types": "npx supabase gen types typescript --project-id cinhozbbyrniovdlrjny | Out-File -FilePath ./src/types/supabase.ts && \"export type DBTables = Database['public']['Tables']\" | Out-File -FilePath ./src/types/supabase.ts -Append"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.8.8",
+    "tailwindcss": "^3.3.1"
   }
 }
